feat(MaterialPillBox): New Features added :sparkles:
- add ic_pillbox_launcher
- change color primary and dark
- shape_button_pill.xml modified
- setupPillChildView methos added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_pillbox_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -19,14 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".NormalPillsActivity"
-            android:label="@string/title_activity_normal_pills"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".DeletePillsActivity"
-            android:label="@string/title_activity_delete_pills"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+
     </application>
 
 </manifest>
