--- a/materialpillsbox/src/main/AndroidManifest.xml
+++ b/materialpillsbox/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="pe.elcomercio.materialpillsbox">
+    package="pe.orbis.materialpillsbox">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
